unpackaged/main/default/objects/ET_Extra_Depreciation_Rate__c/ET_Extra_Depreciation_Rate__c.object-meta.xml
<CustomObject>
    <label>Extra Depreciation Rates Master</label>
    <nameField>
        <displayFormat>EDR-{0000}</displayFormat>
        <label>Extra Depreciation Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extra Depreciation Rates Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>