unpackaged/main/default/objects/ET_Extra_Depreciation_Rate__c/fields/ET_Applicable_KM_Start_Range__c.field-meta.xml
<CustomField>
    <fullName>ET_Applicable_KM_Start_Range__c</fullName>
    <label>Applicable KM Start Range</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>