unpackaged/main/default/objects/ET_Extra_Depreciation_Rate__c/fields/ET_Depreciation_Rate__c.field-meta.xml
<CustomField>
    <fullName>ET_Depreciation_Rate__c</fullName>
    <label>Depreciation Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>