unpackaged/main/default/objects/ET_Extra_Depreciation_Rate__c/fields/ET_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>