unpackaged/main/default/objects/ET_Extra_Depreciation_Rate__c/fields/ET_Vehicle_Type_Master__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Type_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Type Master</label>
    <referenceTo>ET_Vehicle_Type_Master__c</referenceTo>
    <relationshipName>Extra_Depreciation_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>