unpackaged/main/default/objects/ET_Extra_Depreciation_Rate__c/fields/Insurance_Category__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Category__c</fullName>
    <label>Insurance Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Heavy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>