unpackaged/main/default/objects/ET_Extra_Depreciation_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ET_Applicable_KM_End_Range__c</columns>
    <columns>ET_Applicable_KM_Start_Range__c</columns>
    <columns>Insurance_Category__c</columns>
    <columns>ET_Depreciation_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>